2011-04-01  Ulrich Drepper  <drepper@gmail.com>

	* io/Makefile: Compile fallocate.c, fallocate64.c, and
	sync_file_range.c with -fexceptions.
	* sysdeps/unix/sysv/linux/fallocate.c: Make cancelable.
	* sysdeps/unix/sysv/linux/fallocate64.c: Likewise.
	* sysdeps/unix/sysv/linux/i386/fallocate.c: Likewise.
	* sysdeps/unix/sysv/linux/i386/fallocate64.c: Likewise.
	* sysdeps/unix/sysv/linux/wordsize-64/fallocate.c: Likewise.
	* sysdeps/unix/sysv/linux/sync_file_range.c: Likewise.
	* sysdeps/unix/sysv/linux/wordsize-64/syscalls.list: Mark
	sync_file_range as cancellation point
	* sysdeps/unix/sysv/linux/i386/sync_file_range.c: New file.  This is
	now a wrapper around __call_sync_file_range with cancellation handling.
	* sysdeps/unix/sysv/linux/i386/sync_file_range.S: Renamed to ...
	* sysdeps/unix/sysv/linux/i386/call_sync_file_range.S: ...this.  Change
	function name to __call_sync_file_range.
	* sysdeps/unix/sysv/linux/i386/Makefile [subdir=io] (sysdep_routines):
	Add call_sync_file_range.

2011-04-01  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/Makefile (sysdep_headers): Add
	bits/timex.h.

2011-04-01  Ulrich Drepper  <drepper@gmail.com>

	* iconv/iconv.h: Fix typo in comment.
	* io/fcntl.h: Likewise.
	* libio/stdio.h: Likewise.
	* posix/spawn.h: Likewise.
	* posix/unistd.h: Likewise.
	* stdlib/stdlib.h: Likewise.
	* time/time.h: Likewise.
	* wcsmbs/wchar.h: Likewise.

	* sysdeps/unix/sysv/linux/Versions [GLIBC_2.14] (name_to_handle_at,
	open_by_handle): Add.
	* sysdeps/unix/sysv/linux/i386/bits/fcntl.h: Define struct file_handle
	and MAX_HANDLE_SZ.  Declare name_to_handle_at and open_by_handle.
	Augment a few comments.
	* sysdeps/unix/sysv/linux/ia64/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/sh/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/fcntl.h: Likewise.