@@ -53,6 +53,7 @@
 #ifdef __USE_GNU
 # define O_DIRECT	040000
 # define O_NOATIME	01000000 /* Do not set atime.  */
+# define O_PATH		010000000 /* Resolve pathname but do not open file.  */
 #endif
 
 #ifdef __USE_LARGEFILE64
